--- a/assets/style.css
+++ b/assets/style.css
@@ -320,6 +320,12 @@ footer div {
 	  position : relative
   }
   .slide{
+	transition: all .9s ease;
+	width: 100%;
+	-webkit-transition: all .9s ease;
+	-moz-transition: all .9s ease;
+	-ms-transition: all .9s ease;
+	-o-transition: all .9s ease;
 	display:inline-block;
 	position: absolute;
 	transition: all ease 2s
@@ -330,6 +336,17 @@ footer div {
 	object-fit:cover;
 	/*opacity: 0*/
   }
+  .slide p {
+	position: absolute;
+	bottom: 50px; /* adjust this value to move the tagline up or down */
+	left: 50%;
+	transform: translateX(-50%);
+	color: white;
+	font-size: 24px;
+	font-weight: bold;
+	text-align: center;
+	width: 100%;
+  }
   
   .slides img.active{
 	opacity: 1;
@@ -338,11 +355,11 @@ footer div {
 
   #banner .arrow {
 	position: absolute;
-  /*AJOUTE*/
-  top: 50%; 
-  background : white;
-  padding: 10px;
-  border-radius : 50%;
+  	top: 50%; 
+	background : white;
+ 	padding: 10px;
+  	border-radius : 50%;
+	  background-color: transparent;
 }
 #banner .arrow_left {
 	left: 10px;
@@ -355,22 +372,31 @@ footer div {
 /* Gestion des points du carrousel */
 .dots {
 	position: absolute;
-	bottom: 40px;
+	bottom: 10px;
+	left: 50%;
+	transform: translateX(-50%);
 	display: flex;
-}
-.dot {
-	margin-inline: 5px;
-	width: 13px;
-	height: 13px;
-	background-color: #ffffff00;
-	border: 3px solid #fff;
-	border-radius: 100%;
-	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-	cursor: pointer;
-}
-
-.dot_selected {
+	justify-content: center;
+	z-index: 1; 
+  }
+  
+  .dot {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
 	background-color: #fff;
+	margin: 0 5px;
+	cursor: pointer;
+	opacity: 0.7; 
+	transition: opacity 0.3s ease;
+  }
+  
+  .dot.dot_selected {
+	background-color: #ccc;
+	border: 2px solid #ccc;
+	opacity: 1; 
+  }
+  
 }
 /* Fin du code CSS pour le carousel */
 #banner p {
